2008-04-22  Albert Chu  <chu11@llnl.gov>

	* src/libs/util/config_util.c (_cb_cerebrod_heartbeat_freq): Fix
	parse issue.  Found by Andrew Uselton (acuselton at lbl dot gov).
	
2008-04-18  Albert Chu  <chu11@llnl.gov>

	* man/: Fix typos found by Andrew Uselton (acuselton at lbl dot gov).
	
2008-04-18  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.1: Rename to cerebro.7 so it is in the proper
	manpage section.

	* man/Makefile.am: Adjust appropriately.
	
2008-04-01  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_metric_controller.c (_update_metric): Fix
	mem-corruption corner case.

	* META, NEWS: update for release

	* tagged cerebro-1-5-1
	
2008-03-26  Albert Chu  <chu11@llnl.gov>

	* update copyrights in a lot of places

2008-03-28  Patrick Winnertz <patrick.winnertz@credativ.de>

	* man/: Tons of manpage nroff fixes.

	* src/modules: debian compile fixes.
	
2008-03-26  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-4-1

2008-01-29  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (_setup_metric_modules): Add
	debug statement.
	
2008-01-29  Albert Chu  <chu11@llnl.gov>

	* Various minor bug fixes based on code analyzer.

2008-01-25  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.conf.5.in, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_speaker_data.c,
	src/libs/include/cerebro/cerebro_config.h,
	src/libs/include/cerebro/cerebro_constants.h,
	src/libs/util/config_util.c: Support metric module exclude
	options.
	
2008-01-04  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (_cerebrod_message_send): Fix
	memleak.
	
2007-11-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (cerebrod_send_message): Remove
	incorrect comment.

	* src/cerebrod/cerebrod_speaker.c (_speaker_initialize): Fix
	speaker initialization race.
	
2007-10-26  Albert Chu  <chu11@llnl.gov>

	* src/libs/cerebro/cerebro_event.c (_setup_event_connection): Fix
	default port bug.
	